tests/cn/pointer_to_char_cast.error.c.expected
return code: 1
[1/2]: f -- fail
[2/2]: main -- pass
tests/cn/pointer_to_char_cast.error.c:5:5: error: integer value not representable at type char
    (char)&x;
    ^~~~~~~~ 
Value: &x
State file: file:///tmp/state__pointer_to_char_cast.error.c__f.html
